syntax = "proto3";

option csharp_namespace = "ITI.gRPCDemo.Server.Protos";
import "google/protobuf/timestamp.proto";


message TrackingMessage{
	int32 deviceId = 1;
	int32 speed = 2;
	Location location = 3;
	google.protobuf.Timestamp stamp = 4;
	repeated Sensor sensor = 5;
}

message Location{
	double Lat = 1;
	double Long = 2;
}

message TrackingResponse{
	bool success = 1;
}
message Sensor{
	string key = 1;
	double value = 2;
}

message PulseMessage{
	ClientSatus status = 1;
	//string details = 2;
	google.protobuf.Timestamp stamp = 3;
	Details Det = 4;
	reserved 2;
}
message Details{
	string details = 1;
	int32 deviceId= 2;
}
enum ClientSatus{
	INVALID = 0;
	WORKING = 1;
	FAIL = 2;
}
message SubscribeRequest{
	int32 deviceId = 1;
}

message Notification{
	string text = 1;
	google.protobuf.Timestamp stamp = 2;
}
